corrected the text-wrap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,7 @@
-
-
 /* The top-level container Element */
 #d3_taxonomy_vis_container {
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
 }
 
@@ -28,7 +26,7 @@
 
 #d3_taxonomy_vis_container .taxonomy-panel {
     height: 100%;
-    width: 80%;
+    width: 83%;
 }
 
 #d3_taxonomy_vis_container .node-text {
@@ -39,9 +37,9 @@
 }
 #d3_taxonomy_vis_container .legend-node-text {
     font-size: 1.5rem;
-    /*font-weight: bold;*/
+    /* /font-weight: bold;/ */
     font-style: normal;
-    text-align: right;
+    text-align: center;
     text-transform: capitalize;
     /* transform: rotateY(0deg) rotate(-45deg); */
     transform-origin: left left; 
@@ -69,9 +67,10 @@
 #d3_taxonomy_vis_container .species-panel {
     background-color: #efefef;
     height: 100%;
-    min-width: 250px;
-    padding: 2px;
-    width: 20%;
+
+    /* min-width: 250px; */
+    /* padding: 15px; */
+    width: 15%;
 }
 #d3_taxonomy_vis_container .species-panel .parent-name {
     font-weight: bold;
